--- a/distrobox.ini
+++ b/distrobox.ini
@@ -1,18 +1,10 @@
 [tumbleweed]
+# default container, I launch this most often via gnome-terminal as a default profile with the command:
+# distrobox enter
 # image=registry.opensuse.org/opensuse/distrobox:latest
-additional_packages="chezmoi git lazygit neovim fd ripgrep go gcc-c++ npm-default tree-sitter"
+additional_packages="chezmoi git lazygit neovim fd ripgrep go gcc-c++ npm-default tree-sitter make"
 # these do not seem to work, export manually until fixed:
 exported_bins="/usr/bin/go /usr/bin/fd"
-# exported_bins="/usr/bin/git"
-# exported_bins="/usr/bin/chezmoi"
-# exported_bins_path="~/.local/bin"
-
-[test]
-image=registry.opensuse.org/opensuse/distrobox:latest
-pull=yes
-additional_packages="chezmoi git lazygit neovim fd ripgrep go gcc-c++ npm-default tree-sitter"
-# these do not seem to work, export manually until fixed:
-# exported_bins="/usr/bin/nvim"
 # exported_bins="/usr/bin/git"
 # exported_bins="/usr/bin/chezmoi"
 # exported_bins_path="~/.local/bin"
