--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -2,15 +2,31 @@ import = ["~/.config/alacritty/nordfox.toml"]
 
 [window]
 dynamic_title = true
-opacity = 0.96
+opacity = 0.95
 
+[cursor]
+style = "Block"
 [font]
-size = 10.3
+size = 10
 
 [font.normal]
-family = "IBM Plex Mono"
-# family = "InconsolataGo Nerd Font Mono"
+family = "Roboto Mono"
+# family = "IBM Plex Mono"
+style = "Regular"
 
-[font.offset]
-y = -2
+[font.bold]
+family = "Roboto Mono"
+style = "Bold"
 
+[font.bold_italic]
+family = "Roboto Mono"
+style = "Bold Italic"
+
+[font.italic]
+family = "Roboto Mono"
+style = "Italic"
+
+# [font.offset]
+# # vertical spacing, some fonts need a bit of compression
+# y = -1
+#
