--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -10,20 +10,16 @@ style = "Block"
 size = 10
 
 [font.normal]
-family = "Roboto Mono"
-# family = "IBM Plex Mono"
+family = "Roboto Mono Nerd Font Mono"
 style = "Regular"
 
 [font.bold]
-family = "Roboto Mono"
 style = "Bold"
 
 [font.bold_italic]
-family = "Roboto Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "Roboto Mono"
 style = "Italic"
 
 # [font.offset]
