--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,5 +1,6 @@
 [main]
-font=monospace:size=7
+; font=monospace:size=10
+font=RobotoMono Nerd Font:size=10
 dpi-aware=yes
 include=~/.config/foot/nordfox.ini
 
