foot font tweaks

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,8 +1,13 @@
 [main]
-# font=monospace:size=10
-font=RobotoMono Nerd Font:size=10
+# do your font config in fontconfig!
+font=monospace:size=10
 dpi-aware=yes
 include=~/.config/foot/nordfox.ini
 
 [colors]
 alpha=0.9
+
+[key-bindings]
+scrollback-up-page=Page_Up
+scrollback-down-page=Page_Down
+
