--- a/dot_config/foot/nordfox.ini
+++ b/dot_config/foot/nordfox.ini
@@ -1,3 +1,8 @@
+# This theme is based on the Nightfox "nordfox" theme for Neovim
+# https://github.com/EdenEast/nightfox.nvim
+[cursor]
+color=353a45 bbc3d4
+
 [colors]
 # alpha=1.0
 flash=7f7f00
