sync font size in both terms

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,7 +1,7 @@
 [main]
 # do your font config in fontconfig!
-font=monospace:size=10
-dpi-aware=yes
+font=monospace:size=10.5
+# dpi-aware=yes
 include=~/.config/foot/nordfox.ini
 
 [colors]
