--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -7,10 +7,10 @@ opacity = 0.95
 [cursor]
 style = "Block"
 [font]
-size = 11
+size = 10.5
 
 [font.normal]
-family = "Roboto Mono Nerd Font Mono"
+family = "monospace"
 style = "Regular"
 
 [font.bold]
@@ -24,5 +24,5 @@ style = "Italic"
 
 [font.offset]
 # # vertical spacing, some fonts need a bit of compression
-y = -2
+# y = -2
 #
