--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,7 +1,7 @@
 [main]
 # do your font config in fontconfig!
 font=monospace:size=11
-# dpi-aware=yes
+line-height=13.5
 include=~/.config/foot/nordfox.ini
 
 [colors]
