--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -11,12 +11,14 @@ inactive-opacity = 0.7
 
 # active-opacity must be set (even to 1.0) for this rule to be processed
 opacity-rule = [
+  # terminals
   "90:class_g = 'Alacritty' && focused",
   "70:class_g = 'Alacritty' && !focused",
-  # uses strings from window title, can change over time
-  "100:name *?= 'Netflix'",
+  # Don't want video to be affected. n.b.: window title strings can change over time.
+  "100:name *?= 'Disney+'",
   "100:name *?= 'Youtube'",
   "100:name *?= 'Prime Video'",
+  "100:name *?= 'Netflix'",
   "100:name *?= 'Zoom'",
 ];
 
