Ignore Crave video windows

--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -1,6 +1,6 @@
-# picom compositor for Xorg sessions only
+# picom is compositor for Xorg
 # https://github.com/solutionroute/dotfiles
-# 
+#
 # Using the compositor isn't just for eye-candy/transparency, apps like
 # chromium-based browsers have unpleasant artifacts in menus/bookmark dropdowns
 # without a compositor running.
@@ -15,10 +15,10 @@ opacity-rule = [
   "90:class_g = 'Alacritty' && focused",
   "70:class_g = 'Alacritty' && !focused",
   # Don't want video to be affected. n.b.: window title strings can change over time.
+  "100:name *?= 'Crave'",
   "100:name *?= 'Disney+'",
   "100:name *?= 'Youtube'",
   "100:name *?= 'Prime Video'",
-  "100:name *?= 'Netflix'",
   "100:name *?= 'Zoom'",
 ];
 
@@ -30,8 +30,6 @@ vsync = true
 # avoid dwm status bar from being modified
 focus-exclude = "x = 0 && y = 0 && override_redirect = true";
 
-# Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
-# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if
-# detect-transient is enabled, too.
+# Avoid rendering issues and behaviour with app pop-up menus
 detect-transient = true
 detect-client-leader = true
