normalize picom across machines

--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -1,12 +1,14 @@
 # picom is compositor for Xorg
 # https://github.com/solutionroute/dotfiles
 #
+# launch from command line with --backend glx --vsync
+#
 # Using the compositor isn't just for eye-candy/transparency, apps like
 # chromium-based browsers have unpleasant artifacts in menus/bookmark dropdowns
 # without a compositor running.
 
 # help direct eye to active window
-active-opacity = 0.9
+active-opacity = 0.95
 inactive-opacity = 0.7
 
 # active-opacity must be set (even to 1.0) for this rule to be processed
@@ -23,9 +25,6 @@ opacity-rule = [
 ];
 
 ## Quirks handling
-# launch from command line with --backend glx (can't be set here)
-# needed to avoid artifacts with some video replay
-vsync = true
 
 # avoid dwm status bar from being modified
 focus-exclude = "x = 0 && y = 0 && override_redirect = true";
