--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -16,6 +16,8 @@ opacity-rule = [
   # terminals
   "95:class_g = 'Alacritty' && focused",
   "80:class_g = 'Alacritty' && !focused",
+  # pop up menu
+  "95:class_g = 'Rofi'",
   # Don't want video to be affected. n.b.: window title strings can change over time.
   "100:name *?= 'Crave'",
   "100:name *?= 'Disney+'",
