make steam 100 opacity

--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -24,6 +24,7 @@ opacity-rule = [
   "100:name *?= 'Youtube'",
   "100:name *?= 'Prime Video'",
   "100:name *?= 'Zoom'",
+  "100:name *?= 'Steam'",
 ];
 
 ## Quirks handling
