--- a/private_dot_local/private_share/applications/irc.desktop
+++ b/private_dot_local/private_share/applications/irc.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Type=Application
 Version=1.0
-Name=Void Linux IRC
+Name=IRC
 GenericName=IRC
-Comment=Connected to #voidlinux
+Comment=tmux IRC session
 Icon=irssi
-Exec=ssh wabbit -t tmux attach
+Exec=$TERM -e ssh wabbit -t tmux attach
 Terminal=true
 Categories=ConsoleOnly;
 Keywords=irc;void;
