--- a/private_dot_local/private_share/applications/irc.desktop
+++ b/private_dot_local/private_share/applications/irc.desktop
@@ -5,7 +5,7 @@ Name=IRC
 GenericName=IRC
 Comment=tmux IRC session
 Icon=irssi
-Exec=$TERM -e ssh wabbit -t tmux attach
+Exec=$TERM -m -e ssh wabbit -t tmux attach
 Terminal=true
 Categories=ConsoleOnly;
-Keywords=irc;void;
+Keywords=irc;
