--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -23,7 +23,9 @@ insert = "block"
 normal = "block"
 select = "underline"
 
+[keys.normal]
+"tab" = ":buffer-next"
+"S-tab" = ":buffer-previous"
+
 [keys.normal.space]
-"," = ":buffer-previous"
-"." = ":buffer-next"
-"l" = ":run-shell-command $TERM -m -e lazygit"
+"l" = ":run-shell-command $TERM -e lazygit"
