add csd borders for gnome/mutter

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,8 +1,9 @@
 [main]
+include=~/.config/foot/nordfox.ini
 # do your font config in fontconfig!
 font=monospace:size=12
 line-height=14
-include=~/.config/foot/nordfox.ini
+notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 [colors]
 alpha=0.9
@@ -10,4 +11,9 @@ alpha=0.9
 [key-bindings]
 scrollback-up-page=Page_Up
 scrollback-down-page=Page_Down
+
+[csd]
+preferred=server
+border-width=2
+border-color=81a1c1dd
 
