fix: border, titlebar colours

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -13,7 +13,8 @@ scrollback-up-page=Page_Up
 scrollback-down-page=Page_Down
 
 [csd]
-preferred=server
+size=30
 border-width=2
-border-color=81a1c1dd
+border-color=aa81a1c1
+color=ee81a1c1
 
