--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -6,15 +6,16 @@ line-height=14
 notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 [colors]
-alpha=0.9
+alpha=0.95
 
 [key-bindings]
 scrollback-up-page=Page_Up
 scrollback-down-page=Page_Down
 
 [csd]
-size=30
-border-width=2
-border-color=aa81a1c1
-color=ee81a1c1
+size=32
+border-width=1
+border-color=5581a1c1
+color=ff353941
+button-color=99cdcecf
 
