fix: maximize lazygit window

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -21,4 +21,4 @@ left = ["mode", "spinner", "version-control", "file-name"]
 "S-tab" = ":buffer-previous"
 
 [keys.normal.space]
-"l" = ":run-shell-command $TERM -e lazygit"
+"l" = ":run-shell-command $TERM -e -m lazygit"
