--- a/dot_config/distrobox/libvirt.ini
+++ b/dot_config/distrobox/libvirt.ini
@@ -8,7 +8,7 @@ start_now=false
 unshare_all=true
 additional_packages="systemd"
 # Basic utilities for terminal use
-init_hooks="zypper in -y --no-recommends openssh-server patterns-server-kvm_server patterns-server-kvm_tools qemu-arm qemu-ppc qemu-s390x qemu-extra qemu-linux-user"
+init_hooks="zypper in -y --no-recommends openssh-server patterns-server-kvm_server patterns-server-kvm_tools qemu-extra qemu-linux-user"
 init_hooks="systemctl enable sshd.service"
 init_hooks="systemctl enable virtqemud.socket virtnetworkd.socket virtstoraged.socket virtnodedevd.socket"
 # Add the default user to the libvirt group
