--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -3,7 +3,7 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>RobotoMono Nerd Font Mono</family>
+            <family>RobotoMono Nerd Font</family>
             <family>Noto Color Emoji</family>
         </prefer>
     </alias>
