--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -5,8 +5,8 @@ font=monospace:size=11
 line-height=14
 notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
-[colors]
-alpha=0.95
+# [colors]
+# alpha=0.95
 
 [key-bindings]
 scrollback-up-page=Page_Up
