--- a/dot_config/foot/nordfox.ini
+++ b/dot_config/foot/nordfox.ini
@@ -4,9 +4,9 @@
 color=353a45 bbc3d4
 
 [colors]
-# alpha=1.0
+# alpha=0.5
 flash=7f7f00
-flash-alpha=0.5
+# flash-alpha=0.5
 
 background=1f232c
 foreground=cdcecf
