--- a/dot_config/foot/nordfox.ini
+++ b/dot_config/foot/nordfox.ini
@@ -4,11 +4,11 @@
 color=353a45 bbc3d4
 
 [colors]
-# alpha=1.0
+alpha=0.95
 flash=7f7f00
 flash-alpha=0.5
 
-background=1f232c
+background=16191f
 foreground=cdcecf
 
 ## Normal/regular colors (color palette 0-7)
