update re deprecated notify=

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -3,7 +3,9 @@ include=~/.config/foot/nordfox.ini
 # do your font config in fontconfig!
 font=monospace:size=11
 line-height=14
-notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+
+[desktop-notifications]
+command=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 [colors]
 alpha=0.95
