--- a/dot_config/distrobox/distrobox.conf
+++ b/dot_config/distrobox/distrobox.conf
@@ -1,2 +1,3 @@
-# container_image_default="ghcr.io/void-linux/void-glibc-full:latest"
-# container_name_default="void"
+container_image_default="registry.opensuse.org/opensuse/tumbleweed:latest"
+container_name_default="twbox"
+
