--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -1,8 +1,9 @@
 theme="nord-night"
 
 [editor]
-# bufferline = "multiple" # Show currently open buffers, only when more than one exists.
-cursorline = true # Highlight all lines with a cursor
+bufferline = "always"
+cursorline = true
+mouse = true
 true-color = true
 
 [editor.cursor-shape]
@@ -12,14 +13,16 @@ select = "underline"
 
 [editor.indent-guides]
 render = true
+skip-levels = 1
 
 [editor.statusline]
-left = ["mode", "spinner", "version-control", "file-name"]
+left = ["mode", "spinner", "version-control", "file-name", "file-modification-indicator"]
 
 [keys.normal]
 "tab" = ":buffer-next"
 "S-tab" = ":buffer-previous"
+y = "yank_main_selection_to_clipboard"
+p = "paste_clipboard_before"
 
 [keys.normal.space]
-# "l" = ":run-shell-command $TERM -e -m lazygit"
 "g" = [":new", ":insert-output lazygit", ":buffer-close!", ":redraw" ]
