--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -21,17 +21,22 @@ skip-levels = 1
 [editor.statusline]
 left = ["mode", "spinner", "version-control", "file-name"]
 
+[keys.insert]
+esc = ["collapse_selection", "keep_primary_selection", "normal_mode"]
+
+[keys.select]
+esc = ["collapse_selection", "keep_primary_selection", "normal_mode"]
+A-x = "extend_to_line_bounds"
+X = ["extend_line_up", "extend_to_line_bounds"]
+
 [keys.normal]
+esc = ["collapse_selection", "keep_primary_selection", "normal_mode"]
 "tab" = ":buffer-next"
 "S-tab" = ":buffer-previous"
 y = "yank_main_selection_to_clipboard"
 p = "paste_clipboard_before"
 
 # Alt-x shrink selection by one line
-A-x = "extend_to_line_bounds"
-X = ["extend_line_up", "extend_to_line_bounds"]
-
-[keys.select]
 A-x = "extend_to_line_bounds"
 X = ["extend_line_up", "extend_to_line_bounds"]
 
