--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -7,6 +7,7 @@ theme="nord-night"
 [editor]
 auto-format = true
 bufferline = "multiple"
+
 color-modes = true
 cursorline = true
 line-number = "relative"
@@ -39,8 +40,9 @@ C-n = ["move_line_down", "scroll_down"]
 esc = ["collapse_selection", "keep_primary_selection", "normal_mode"]
 "tab" = ":buffer-next"
 "S-tab" = ":buffer-previous"
-# y = "yank_main_selection_to_clipboard"
-# p = "paste_clipboard_before"
+y = "yank_main_selection_to_clipboard"
+P = "paste_clipboard_before"
+p = "paste_clipboard_after"
 
 # Alt-x shrink selection by one line
 A-x = "extend_to_line_bounds"
