switch to arch containers

--- a/dot_config/distrobox/distrobox.conf
+++ b/dot_config/distrobox/distrobox.conf
@@ -1,2 +1,2 @@
-container_image_default="registry.opensuse.org/opensuse/tumbleweed:latest"
-container_name="twbox"
+container_image_default="archlinux:latest"
+container_name="archbox"
