--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -40,6 +40,7 @@ validation = true
 name = "go"
 auto-format = true
 formatter = { command = "goimports" }
+language-servers = ["gopls", "golangci-lint-lsp"]
 
 [[language]]
 name = "python"
