back to sexy terminal colours

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,14 +1,11 @@
 [main]
-include=~/.config/foot/nordfox.ini
+include=~/.config/foot/terminalsexy.ini
 # do your font config in fontconfig!
 font=monospace:size=11
 line-height=14
 
 [desktop-notifications]
 command=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
-
-[colors]
-alpha=0.92
 
 [key-bindings]
 scrollback-up-page=Page_Up
