fix: switch to mui-dark theme

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,8 +1,16 @@
 [main]
-include=~/.config/foot/terminalsexy.ini
+# include=~/.config/foot/nordfox.ini
+# include=~/.config/foot/mui-dark.ini
+include=~/.config/foot/mui-dark.ini
+
 # do your font config in fontconfig!
 font=monospace:size=11
-line-height=14
+# line-height=14
+
+[colors]
+# override theme colors or alpha here
+# alpha=1.0
+# alpha=0.94
 
 [desktop-notifications]
 command=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -12,9 +20,11 @@ scrollback-up-page=Page_Up
 scrollback-down-page=Page_Down
 
 [csd]
+# colors are in AARRGGBB format, 00 fully translucent, FF opaque
 size=32
-border-width=1
-border-color=5581a1c1
-color=ff353941
-button-color=99cdcecf
+border-width=2
+border-color=ff33353a # surface-container-highest
+button-color=ffc4c6d0 # on-surface-variant
+color=ff282a2f # surface-container-high
+
 
