fix: line-height back to 14

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -3,7 +3,7 @@ include=~/.config/foot/mui-dark.ini
 
 # do your font config in fontconfig!
 font=monospace:size=11
-# line-height=14
+line-height=14
 
 [colors]
 # override theme colors or alpha here
