--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -8,7 +8,7 @@ font=monospace:size=11
 [colors]
 # override theme colors or alpha here
 # alpha=1.0
-# alpha=0.94
+alpha=0.94
 
 [desktop-notifications]
 command=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
