--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -3,7 +3,7 @@ include=~/.config/foot/mui-dark.ini
 
 # do your font config in fontconfig!
 font=monospace:size=11
-line-height=14
+# line-height=14
 
 [colors]
 # override theme colors or alpha here
@@ -25,4 +25,5 @@ border-color=ff33353a # surface-container-highest
 button-color=ffc4c6d0 # on-surface-variant
 color=ff282a2f # surface-container-high
 
-
+[mouse]
+hide-when-typing=yes
