--- a/dot_config/helix/themes/mui_dark.toml
+++ b/dot_config/helix/themes/mui_dark.toml
@@ -6,7 +6,7 @@
 # Matching and other themes can be found at https://github.com/mwyvr/cli-themes.
 
 # UI
-"ui.selection" = { bg = "surface-bright" }                                     # only Helix theme attribute that *must* be defined
+"ui.selection" = { bg = "on-secondary" }                                       # only Helix theme attribute that *must* be defined
 "ui.background" = { bg = "surface" }                                           # set bg = "" for transparency 
 "ui.text" = { fg = "on-surface" }                                              # Default text style, overridden with specific rules
 "ui.text.focus" = { fg = "on-primary-container", bg = "primary-container" }    # Selected line in the file/buffer/jumplist/symbol/etc picker 
@@ -97,6 +97,7 @@
 "surface-container-highest" = "#33353a" # N-24; window splitline
 "inverse-surface" = "#e2e2e9"           # N-90; unused 
 "inverse-on-surface" = "#2e3036"        # N-20; unused 
+"inverse-primary" = "#415f91"           # P-40
 "primary" = "#aac7ff"                   # P-80; (blue primary, affects NV and surface)
 "on-primary" = "#0a305f"                # P-20;
 "primary-container" = "#284777"         # P-30; 
