--- a/dot_config/helix/languages.toml
+++ b/dot_config/helix/languages.toml
@@ -5,6 +5,20 @@
 # TODO Word completion and snippets:
 # https://github.com/estin/simple-completion-language-server
 
+# https://github.com/estin/simple-completion-language-server
+[language-server.scls]
+command = "simple-completion-language-server"
+
+# [language-server.scls.config]
+# max_completion_items = 20            # set max completion results len for each group: words, snippets, unicode-input
+# snippets_first = true                # completions will return before snippets by default
+# snippets_inline_by_word_tail = false # suggest snippets by WORD tail, for example text `xsq|` become `x^2|` when snippet `sq` has body `^2`
+# feature_words = true                 # enable completion by word
+# feature_snippets = true              # enable snippets
+# feature_unicode_input = true         # enable "unicode input"
+# feature_paths = true                 # enable path completion
+# feature_citations = false            # enable citation completion (only on `citation` feature enabled)
+
 # shells
 [[language]]
 name = "fish"
@@ -22,6 +36,7 @@ auto-format = true
 name = "markdown"
 auto-format = true
 formatter = { command = "prettier", args = ["--parser", "markdown"] }
+language-servers = ["scls"]
 
 # spelling and grammar
 [language-server.harper-ls]
