--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -29,7 +29,7 @@
     colorMoved = default
 
 [user]
-    email = 4117918+mwyvr@users.noreply.github.com
+	email = git@mikewatkins.ca
 	name = Mike Watkins
 
 [init]
