cleanup post Aeon install

--- a/dot_config/distrobox/distrobox.conf
+++ b/dot_config/distrobox/distrobox.conf
@@ -1,2 +1,2 @@
-container_image_default="archlinux:latest"
-container_name="archbox"
+# container_image_default="archlinux:latest"
+# container_name="archbox"
