use a little transparency

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -1,5 +1,6 @@
 [main]
 include=~/.config/foot/mui-dark.ini
+# include=/usr/share/foot/themes/material-design
 
 # do your font config in fontconfig!
 font=monospace:size=11
@@ -7,8 +8,8 @@ line-height=14
 
 [colors]
 # override theme colors or alpha here
-# alpha=1.0
-# alpha=0.94
+# alpha=1.0 # opaque
+alpha=0.94
 
 [desktop-notifications]
 command=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -23,6 +24,7 @@ size=32
 border-width=2
 border-color=ff33353a # surface-container-highest
 button-color=ffc4c6d0 # on-surface-variant
-color=ff282a2f # surface-container-high
+# color=ff282a2f # title-bar, opaque, surface-container-high
+color=f5282a2f # title bar, very light transparency, surface-container-high
 
 
