--- a/dot_config/alacritty/private_alacritty.toml
+++ b/dot_config/alacritty/private_alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/nordfox.toml"]
 
 [window]
 dynamic_title = true
@@ -7,7 +6,8 @@ opacity = 0.95
 [cursor]
 style = "Block"
 [font]
-size = 12
+size = 11
+# size = 11
 
 [font.normal]
 family = "monospace"
@@ -16,3 +16,6 @@ family = "monospace"
 # # vertical spacing, normalizing with foot setup
 y = -2
 
+[general]
+# import = ["~/.config/alacritty/nordfox.toml"]
+import = ["~/.config/alacritty/mui-dark.toml"]
