feat: dim colors and better min/max/close buttons

--- a/dot_config/foot/mui-dark.ini
+++ b/dot_config/foot/mui-dark.ini
@@ -27,13 +27,24 @@ bright5 = ddbce0 # magenta
 bright6 = a0d0cb # cyan
 bright7 = c4c6d0 # white
 
+dim0 = 0c0c0e # black
+dim1 = b30b00 # red
+dim2 = 42512f # green
+dim3 = 5c5124 # yellow
+dim4 = 4264a4 # blue
+dim5 = 806086 # magenta
+dim6 = 496a67 # cyan
+dim7 = 56575d # white
+
 # Place the following [csd] section in your foot.ini:
 
 # [csd]
 # # colors are in AARRGGBB format, 00 fully translucent, FF opaque
 # size=32
 # border-width=2
-# border-color=ff33353a # surface-container-highest
-# button-color=ffc4c6d0 # on-surface-variant
-# color=ff282a2f # surface-container-high
-
+# border-color=ff242424 # gnome focussed
+# button-color = ff8e9099  # NV-60; 
+# button-minimize-color=ff1F1F1F 
+# button-maximize-color=ff1F1F1F
+# button-close-color=ff1F1F1F
+# color=ff242424 # title-bar, gnome focussed
