--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -8,8 +8,8 @@ line-height=14
 
 [colors]
 # override theme colors or alpha here
-# alpha=1.0 # opaque
-alpha=0.94
+alpha=1.0 # opaque
+# alpha=0.96
 
 [desktop-notifications]
 command=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
