fix hide mouse when typing

--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -6,6 +6,9 @@ include=~/.config/foot/mui-dark.ini
 font=monospace:size=11
 line-height=14
 
+[mouse]
+hide-when-typing=yes
+
 [colors]
 # override theme colors or alpha here
 # alpha=1.0 # opaque
