--- a/dot_config/helix/themes/mui_dark.toml
+++ b/dot_config/helix/themes/mui_dark.toml
@@ -2,6 +2,7 @@
 # (c) Mike Watkins, MIT licensed: https://github.com/mwyvr/cli-themes/blob/main/LICENSE
 #
 # mui_dark is a dark Material Design-inspired theme for the Helix editor;
+# For inspiration, see https://material-foundation.github.io/material-theme-builder/
 
 # Matching and other themes can be found at https://github.com/mwyvr/cli-themes.
 
