--- a/dot_config/swayidle/config
+++ b/dot_config/swayidle/config
@@ -1,2 +1,3 @@
 timeout 300 'swaylock -f -c 000000'
-timeout 600 'wlopm --off DP-1 --off DP-2' resume 'wlopm --on DP-1 --on DP-2'
+# timeout 600 'wlopm --off DP-1 --off DP-2' resume 'wlopm --on DP-1 --on DP-2'
+timeout 600 'wlopm --off eDP-1' resume 'wlopm --on eDP-1'
