--- a/dot_config/distrobox/distrobox.conf
+++ b/dot_config/distrobox/distrobox.conf
@@ -1,4 +1,5 @@
-container_image_default="chimeralinux/chimera"
-container_name="chimera"
+# see db script
+# container_image_default="chimeralinux/chimera"
+# container_name="chimera"
 # container_image_default="archlinux:latest"
 # container_name="archbox"
